<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_image_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/tacoma"
                android:scaleType="centerCrop"
                android:contentDescription="@string/header_image_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/description"
                android:layout_marginStart="@dimen/home_margin_start"
                android:textSize="@dimen/home_title_text_size"
                android:text="@string/home_title_head"
                android:textColor="@color/heading_text_color"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/header"
                android:layout_marginStart="@dimen/home_margin_start"
                android:textSize="@dimen/home_desc_text_size"
                android:text="@string/home_title_desc"
                android:textColor="@color/heading_text_color"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/home_text_margin_bottom"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/home_margin_start"
                app:cardCornerRadius="@dimen/home_card_corner"
                app:cardBackgroundColor="@color/dark_gray">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_margin_start"
                    android:layout_marginEnd="@dimen/home_margin_end"
                    android:layout_marginTop="@dimen/home_card_margin_top"
                    android:layout_marginBottom="@dimen/home_card_margin_bottom">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/filterHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/filter"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_size_large"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/make"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/filterHeading"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        style="@style/spinner_style"/>
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/make"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        style="@style/spinner_style"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carRecycler"
                android:layout_width="match_parent"
                android:layout_height="@dimen/width_zero"
                app:layout_constraintTop_toBottomOf="@id/cardFilter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/recycler_top_margin"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>